freest/test/prog/Invalid/Typing/TypeSigNoBind/TypeSigNoBind.fst
module TypeSigNoBind

f : Int -> Int
